examples/good/01-03-default-values.lagger
int main(){
    int a;
    string b;
    boolean c;
    println(a);
    println(b);
    println(c);
    return 0;
}