examples/bad/03-01-invalid-assignment.lagger
int main(){
    int a = 1;
    string s = "hello";
    a = s;
    return 0;
}